--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -38,3 +38,15 @@
 //     border-bottom: 0;
 //   }
 // }
+
+table .button {
+  margin: 0;
+}
+
+.panel {
+  background: none;
+}
+
+select {
+  height: inherit;
+}
