--- a/app/views/table.html
+++ b/app/views/table.html
@@ -3,7 +3,7 @@
         <button class="button" ng-click="add()">
             <i class="fi-plus"></i> 添加
         </button>
-        <button class="button">
+        <button class="button" ng-click="update()">
             <i class="fi-save"></i> 保存更新
         </button>
     </div>
@@ -21,11 +21,17 @@
             </thead>
             <tbody>
             <tr ng-repeat="table in tables">
-                <td>
+                <td >
                     {{ table.table_number }}
                 </td>
-                <td>
-                    {{ table.table_type_info.name }}
+                <td ui-event="{ mouseenter: 'mouse_enter_to_table_type($event, table)',
+                                mouseleave: 'mouse_leave_to_table_type($event, table)'}">
+                    <span ng-show="!table.editing">{{ table.table_type_info.slug }}</span>
+                    <a ng-show="table.show_edit && !table.editing" ng-click="to_edit(table)"><i class="fi-page-edit"></i></a>
+                    <select ng-show="table.editing" ng-options="item.slug for item in table_types"
+                            ng-model="table.table_type_info"
+                            ui-event="{ blur: 'blurSelect($event, table)'}">
+                    </select>
                 </td>
             </tr>
             </tbody>
@@ -92,7 +98,7 @@
     <hr>
 
     <div class="button-group">
-        <button class="button" ng-click="confirm()">确认</button>
+        <button class="button" ng-click="confirm()" ng-disabled="table_form.table_number==''">确认</button>
         <button class="button secondary" ng-click="cancel()">取消</button>
     </div>
 
@@ -118,7 +124,7 @@
                         <label for="type_min" class="right inline">最少就餐人数</label>
                     </div>
                     <div class="small-9 columns">
-                        <input type="text" id="type_min" ng-model="type_form.min_seats">
+                        <input type="text" id="type_min" ng-model="type_form.min_seats" number="true">
                     </div>
                 </div>
 
@@ -127,8 +133,9 @@
                         <label for="type_max" class="right inline">最多就餐人数</label>
                     </div>
                     <div class="small-9 columns">
-                        <input type="text" id="type_max" ng-model="type_form.max_seats">
+                        <input type="text" id="type_max" ng-model="type_form.max_seats" number="true">
                     </div>
+                    <small class="error" ng-show="type_form.min_seats > type_form.max_seats">最多就餐人数必须大于最少就餐人数</small>
                 </div>
             </div>
         </div>
@@ -137,7 +144,11 @@
     <hr>
 
     <div class="button-group">
-        <button class="button" ng-click="confirm()">确认</button>
+        <button class="button" ng-click="confirm()"
+                ng-disabled="type_form.name=='' ||
+                type_form.min_seats > type_form.max_seats ||
+                type_form.min_seats==null ||
+                type_form.max_seats==null">确认</button>
         <button class="button secondary" ng-click="cancel()">取消</button>
     </div>
 
