--- a/app/views/restaurant.html
+++ b/app/views/restaurant.html
@@ -1,4 +1,4 @@
-<form method="post" action="http://7u2ghq.com1.z0.glb.clouddn.com/"
+<form method="post" action="http://upload.qiniu.com/"
      enctype="multipart/form-data">
     <!--<div class="row">-->
         <!--<div class="large-4 columns">-->
