fix upload file to qiniu

--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -1,5 +1,11 @@
 <h2>点快 - 自助取号系统</h2>
 <hr>
+
+<div style="padding:10px;border:1px solid #333;">
+  <p>Logo</p>
+  <img src="http://7u2ghq.com1.z0.glb.clouddn.com/restaurant-{{ restaurant.id }}" alt="{{ restaurant.name }}">
+</div>
+
 <div class="row" data-equalizer>
     <div class="large-6 columns">
         <form name="reg_form">
