--- a/app/views/restaurant.html
+++ b/app/views/restaurant.html
@@ -1,3 +1,25 @@
+<form ng-submit="update()">
+
+    <div>
+    餐厅名称
+    <input type="text" ng-model="restaurant_update.name" placeholder="{{ restaurant.name }}" />
+    <!--
+    <input type="hidden" ng-model="restaurant_update.id" value="{{ restaurant.id }}" />
+    -->
+    </div>
+
+    <div>
+    餐厅背景图
+    <input type="file" file-upload="background"/>
+    </div>
+
+    <div>
+    <input type="submit" value="更新"/>
+    </div>
+
+</form>
+
+
 <form method="post" action="http://upload.qiniu.com/"
      enctype="multipart/form-data">
     <!--<div class="row">-->
@@ -11,7 +33,7 @@
     <div class="row">
         <div class="large-4 columns">
             <label>餐厅背景图
-                <input name="key" type="hidden" value="{{ restaurant.id  }}">
+                <input name="key" type="hidden" value="restaurant-{{ restaurant.id  }}">
                 <input name="token" type="hidden" value="{{ uptoken }}">
                 <input name="file" type="file" />
             </label>
