--- a/app/views/registration.html
+++ b/app/views/registration.html
@@ -2,7 +2,7 @@
 <hr>
 
 <div style="padding:10px;border:1px solid #333;">
-  <p>Logo</p>
+  <p>restaurant background</p>
   <img src="http://7u2ghq.com1.z0.glb.clouddn.com/restaurant-{{ restaurant.id }}" alt="{{ restaurant.name }}">
 </div>
 
