--- a/app/views/table.html
+++ b/app/views/table.html
@@ -1,116 +1,24 @@
-<div class="right">
-    <div class="button-group">
-        <button class="button" ng-click="add()">
-            <i class="fi-plus"></i> 添加
-        </button>
-        <button class="button" ng-click="update()">
-            <i class="fi-save"></i> 保存更新
-        </button>
-    </div>
-</div>
-
-
-<tabset>
-    <tab heading="餐桌管理" active="tab[0].active">
-        <table>
-            <thead>
-            <tr>
-                <th width="250">餐桌号码（名称）</th>
-                <th width="250">餐桌类型</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="table in tables">
-                <td >
-                    {{ table.table_number }}
-                </td>
-                <td ng-mouseenter="mouse_enter_to_td(table)" ng-mouseleave="mouse_leave_from_td(table)">
-                    <span ng-show="!table.editing">{{ table.table_type_info.slug }}</span>
-                    <a ng-show="table.show_edit && !table.editing" ng-click="to_edit(table)"><i class="fi-page-edit"></i></a>
-                    <select ng-show="table.editing" ng-options="item.slug for item in table_types"
-                            ng-model="table.table_type_info"
-                            ui-event="{ blur: 'blurSelect($event, table)'}">
-                    </select>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-
-
-    </tab>
-    <tab heading="餐桌类型管理" active="tab[1].active">
-        <table>
-            <thead>
-            <tr>
-                <th width="200">类型名称</th>
-                <th width="150">最少就餐人数</th>
-                <th width="150">最多就餐人数</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="table_type in table_types">
-                <td>
-                    {{ table_type.name }}
-                </td>
-                <td ng-mouseenter="mouse_enter_to_td(table_type.min)" ng-mouseleave="mouse_leave_from_td(table_type.min)">
-                    <span ng-show="!table_type.min.editing">{{ table_type.min_seats }}</span>
-                    <a ng-show="table_type.min.show_edit && !table_type.min.editing" ng-click="to_edit_min_seats(table_type)"><i class="fi-page-edit"></i></a>
-                    <input type="number" ng-model="table_type.min_seats" number="true" ng-show="table_type.min.editing"
-                           ui-event="{ blur: 'blurInput($event, table_type)'}">
-                    <small class="error" ng-show="table_type.min_seats > table_type.max_seats">最多就餐人数必须大于最少就餐人数</small>
-                </td>
-
-                <td ng-mouseenter="mouse_enter_to_td(table_type.max)" ng-mouseleave="mouse_leave_from_td(table_type.max)">
-                    <span ng-show="!table_type.max.editing">{{ table_type.max_seats}}</span>
-                    <a ng-show="table_type.max.show_edit && !table_type.max.editing" ng-click="to_edit_max_seats(table_type)"><i class="fi-page-edit"></i></a>
-                    <input type="number" ng-model="table_type.max_seats" number="true" ng-show="table_type.max.editing"
-                           ui-event="{ blur: 'blurInput($event, table_type)'}">
-                    <small class="error" ng-show="table_type.min_seats > table_type.max_seats">最多就餐人数必须大于最少就餐人数</small>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </tab>
-</tabset>
-
-
-<script type="text/ng-template" id="add_table.html">
-    <h4>添加新餐桌</h4>
-    <hr>
-    <form>
-        <div class="row">
-            <div class="small-8 columns">
-                <div class="row">
-                    <div class="small-3 columns">
-                        <label for="table_number" class="right inline">餐桌号码（名称）</label>
-                    </div>
-                    <div class="small-9 columns">
-                        <input type="text" id="table_number" ng-model="table_form.table_number">
-                    </div>
-                </div>
-
-                <div class="row">
-                    <div class="small-3 columns">
-                        <label for="ttype" class="right inline">餐桌类型{{ tab }}</label>
-                    </div>
-                    <div class="small-9 columns">
-                        <select ng-options="item.slug for item in table_types"
-                                ng-model="table_form.table_type" name="ttype">
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </form>
-
-    <hr>
-
-    <div class="button-group">
-        <button class="button" ng-click="confirm()" ng-disabled="table_form.table_number==''">确认</button>
-        <button class="button secondary" ng-click="cancel()">取消</button>
-    </div>
-
-</script>
+<button class="button" ng-click="add()">
+    <i class="fi-plus"></i> 添加
+</button>
+<table>
+    <thead>
+    <tr>
+        <th width="200">餐桌类型名称</th>
+        <th width="150">最少就餐人数</th>
+        <th width="150">最多就餐人数</th>
+        <th>操作</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr ng-repeat="table_type in table_types">
+        <td>{{ table_type.name }}</td>
+        <td>{{ table_type.min_seats }}</td>
+        <td>{{ table_type.max_seats }}</td>
+        <td><a ng-click="edit(table_type)">编辑</a></td>
+    </tr>
+    </tbody>
+</table>
 
 <script type="text/ng-template" id="add_table_type.html">
     <h4>添加新餐桌类型</h4>
