--- a/app/views/table.html
+++ b/app/views/table.html
@@ -40,7 +40,7 @@
                         <label for="type_min" class="right inline">最少就餐人数</label>
                     </div>
                     <div class="small-9 columns">
-                        <input type="text" id="type_min" ng-model="type_form.min_seats" number="true">
+                        <input type="number" id="type_min" ng-model="type_form.min_seats" number="true">
                     </div>
                 </div>
 
@@ -49,7 +49,7 @@
                         <label for="type_max" class="right inline">最多就餐人数</label>
                     </div>
                     <div class="small-9 columns">
-                        <input type="text" id="type_max" ng-model="type_form.max_seats" number="true">
+                        <input type="number" id="type_max" ng-model="type_form.max_seats" number="true">
                     </div>
                     <small class="error" ng-show="type_form.min_seats > type_form.max_seats">最多就餐人数必须大于最少就餐人数</small>
                 </div>
