--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,11 +1,46 @@
-<h1>登陆页面</h1>
 
-<form ng-submit="login()">
-  <input ng-model="user.username" type="email" name="username" id="username" required placeholder="手机号/邮箱"/>
-  <br>
-  <input ng-model="user.password" type="password" name="password" id="password" required placeholder="密码">
-  <br>
-  <div>
-    <input type="submit" name="" value="登陆">
-  </div>
-</form>
+<div class="row" data-ng-cloak>
+    <div class="large-12 columns">
+
+        <h2>登陆页面</h2>
+
+        <form ng-submit="login()">
+            <div class="row">
+                <div class="large-6 columns">
+                    <label>手机号
+                        <input ng-model="user.username"
+                               type="number"
+                               name="username"
+                               id="username"
+                               required
+                               placeholder="请输入手机号"/>
+                    </label>
+
+                    <label>密码
+                        <input ng-model="user.password"
+                               type="password"
+                               name="password"
+                               id="password"
+                               required
+                               placeholder="密码">
+                    </label>
+
+
+                    <div class="row">
+                        <div class="large-4 columns">
+                            <input type="submit" name="" value="确定" class="button expand tiny" ng-disabled="!user.password || !user.username">
+                        </div>
+
+                        <div class="large-4 columns">
+                            <input value="忘记密码" class="button secondary tiny" ng-click="go_retrieve_passwd()">
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </form>
+    </div>
+</div>
+
+
