--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,61 +1,21 @@
-// $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
-// // bower:scss
- // endbower
-// 
-// .browsehappy {
-//   margin: 0.2em 0;
-//   background: #ccc;
-//   color: #000;
-//   padding: 0.2em 0;
-// }
-// 
-// /* Space out content a bit */
-// body {
-//   padding-top: 20px;
-//   padding-bottom: 20px;
-// }
-// 
-// 
-// /* Responsive: Portrait tablets and up */
-// @media screen and (min-width: 768px) {
-//   .container {
-//     max-width: 730px;
-//   }
-// 
-//   /* Remove the padding we set earlier */
-//   .header,
-//   .marketing,
-//   .footer {
-//     padding-left: 0;
-//     padding-right: 0;
-//   }
-//   /* Space out the masthead */
-//   .header {
-//     margin-bottom: 30px;
-//   }
-//   /* Remove the bottom border on the jumbotron for visual effect */
-//   .jumbotron {
-//     border-bottom: 0;
-//   }
-// }
-
-table .button {
-  margin: 0;
+body .window {
+  height: 100%;
+  .off-canvas-wrap {
+    height: 100%;
+    .inner-wrap {
+      height: 100%;
+      .icon-bar {
+        position: absolute;
+      }
+    }
+  }
 }
 
-.panel {
-  background: none;
+.title-area h1 {
+  padding-left: 50px;
+  background: url("/images/white48.png") no-repeat left top;
 }
 
-td > select {
-  margin: 0;
-  padding: 0;
-}
-
-select {
-  height: inherit;
-}
-
-td > input[type="number"] {
-  margin: 0;
+#content {
+  margin-left: 68px;
 }
