--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -39,7 +39,7 @@
 //  @import "../../bower_components/foundation/scss/foundation/components/sub-nav";
 //  @import "../../bower_components/foundation/scss/foundation/components/switches";
 //  @import "../../bower_components/foundation/scss/foundation/components/tables";
-//  @import "../../bower_components/foundation/scss/foundation/components/tabs";
+@import "../../bower_components/foundation/scss/foundation/components/tabs";
 //  @import "../../bower_components/foundation/scss/foundation/components/thumbs";
 //  @import "../../bower_components/foundation/scss/foundation/components/tooltips";
 @import "../../bower_components/foundation/scss/foundation/components/top-bar";
