statistic report functions

--- a/app/views/console.html
+++ b/app/views/console.html
@@ -1,5 +1,4 @@
 <div class="off-canvas-wrap" ng-cloak>
-
   <top-bar>
     <ul class="title-area">
       <li class="name">
@@ -32,7 +31,7 @@
         <i class="fi-info"></i>
         <label for="">历史</label>
       </a>
-      <a class="item">
+      <a class="item" ui-sref=".report">
         <i class="fi-mail"></i>
         <label for="">分析</label>
       </a>
