--- a/app/views/console.html
+++ b/app/views/console.html
@@ -27,7 +27,7 @@
         <i class="fi-home"></i>
         <label for="">营业</label>
       </a>
-      <a class="item">
+      <a class="item" ui-sref=".history">
         <i class="fi-info"></i>
         <label for="">历史</label>
       </a>
