improve topbar completed

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -38,11 +38,45 @@
 //  @import "../../bower_components/foundation/scss/foundation/components/split-buttons";
 //  @import "../../bower_components/foundation/scss/foundation/components/sub-nav";
 //  @import "../../bower_components/foundation/scss/foundation/components/switches";
-//  @import "../../bower_components/foundation/scss/foundation/components/tables";
-@import "../../bower_components/foundation/scss/foundation/components/tabs";
+  @import "../../bower_components/foundation/scss/foundation/components/tables";
+  @import "../../bower_components/foundation/scss/foundation/components/tabs";
 //  @import "../../bower_components/foundation/scss/foundation/components/thumbs";
 //  @import "../../bower_components/foundation/scss/foundation/components/tooltips";
-@import "../../bower_components/foundation/scss/foundation/components/top-bar";
-//  @import "../../bower_components/foundation/scss/foundation/components/type";
+  @import "../../bower_components/foundation/scss/foundation/components/top-bar";
+  @import "../../bower_components/foundation/scss/foundation/components/type";
   @import "../../bower_components/foundation/scss/foundation/components/offcanvas";
-//  @import "../../bower_components/foundation/scss/foundation/components/visibility";
+  @import "../../bower_components/foundation/scss/foundation/components/visibility";
+
+
+// Custom Components
+.dk-icon-bar {
+@include icon-bar(
+
+  // Set the background color of the icon bar. Default: $icon-bar-bg.
+  $bar-bg: $dk-gray,
+  //  Set the font color of the icon bar. Default: $icon-bar-font-color.
+  $bar-font-color: $dk-orange,
+  // Set the hover background color for the icon bar. Default: $icon-bar-hover-color.
+  $bar-hover-color: $dk-orange,
+  // Set the color of the icons for the icon bar. Default: $icon-bar-icon-color
+  $bar-icon-color: $dk-orange,
+  // Set the background of the color when the icon bar is clicked or tapped on (or items within the icon bar). Default: $icon-bar-active-color.
+  $bar-active-color: $dk-orange,
+  // Set the padding for icon bar. Default: $icon-bar-item-padding.
+  $padding: $icon-bar-item-padding,
+  // Set the font-size of the icon bar. Default: $icon-bar-font-size.
+  $font-size: $icon-bar-font-size,
+  // Set the size of the icons within the icon bar. Default: $icon-bar-icon-size.
+  $icon-size: $icon-bar-icon-size,
+  // Set the width of images within the icon bar. Default: $icon-bar-image-width
+  $image-width: $icon-bar-image-width,
+  // Set the height of images within the icon bar. Default: $icon-bar-image-height
+  $image-height: $icon-bar-image-height,
+  // Assign whether or not base styles usually associated with the icon bar to appear the way it usually does should be included. Default: true.
+  $base-style: true,
+  // Allow disabled icons. Default: false.
+  // If enabled add class disabled.
+  $disabled: false
+  );
+}
+
