--- a/app/styles/settings.scss
+++ b/app/styles/settings.scss
@@ -120,15 +120,19 @@ $include-html-global-classes: $include-html-classes;
 //$gainsboro   : #FFBB33;
 //$iron        : #FFBB00;
 //$base        : #FFAA33;
-$aluminum    : #FFAA00;
-$jumbo       : #FF9933;
-$monsoon     : #FF9900;
-$steel       : #FF8833;
-$charcoal    : #FF8800;
-$tuatara     : #FF7733;
-$oil         : #FF7700;
-$jet         : #FF6633;
-$black       : #FF6600;
+//$aluminum    : #FFAA00;
+//$jumbo       : #FF9933;
+//$monsoon     : #FF9900;
+//$steel       : #FF8833;
+//$charcoal    : #FF8800;
+//$tuatara     : #FF7733;
+//$oil         : #FF7700;
+//$jet         : #FF6633;
+//$black       : #FF6600;
+
+// custom colors by diankuai
+$dk-orange: #FF7700;
+$dk-gray: #EFEFEF;
 
 // We use these as default colors throughout
 // $primary-color: #008CBA;
@@ -1380,11 +1384,11 @@ $black       : #FF6600;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-// $topbar-bg-color: #f08300;
+$topbar-bg-color: $dk-gray;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
-$topbar-height: rem-calc(50);
+$topbar-height: rem-calc(60);
 // $topbar-margin-bottom: 0;
 
 // Controlling the styles for the title in the top bar
@@ -1392,7 +1396,7 @@ $topbar-height: rem-calc(50);
 // $topbar-title-font-size: rem-calc(17);
 
 // Style the top bar dropdown elements
-// $topbar-dropdown-bg: $oil;
+$topbar-dropdown-bg: $dk-orange;
 // $topbar-dropdown-link-color: $white;
 // $topbar-dropdown-link-bg: $oil;
 // $topbar-dropdown-link-bg-hover: $oil;
@@ -1407,11 +1411,11 @@ $topbar-height: rem-calc(50);
 // $topbar-link-color-active: $white;
 // $topbar-link-color-active-hover: $white;
 // $topbar-link-weight: $font-weight-normal;
-// $topbar-link-font-size: rem-calc(13);
+$topbar-link-font-size: rem-calc(16);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
-// $topbar-link-bg: $topbar-bg;
+$topbar-link-bg: $dk-orange;
 // $topbar-link-bg-color-hover: $charcoal;
-// $topbar-link-bg-hover: $oil;
+$topbar-link-bg-hover: scale-color($topbar-link-bg, $lightness: 20%);
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
@@ -1431,9 +1435,9 @@ $topbar-height: rem-calc(50);
 
 // Top menu icon styles
 // $topbar-menu-link-transform: uppercase;
-// $topbar-menu-link-font-size: rem-calc(13);
+$topbar-menu-link-font-size: rem-calc(30);
 // $topbar-menu-link-weight: $font-weight-bold;
-// $topbar-menu-link-color: $white;
+$topbar-menu-link-color: $dk-orange;
 // $topbar-menu-icon-color: $white;
 // $topbar-menu-link-color-toggled: $jumbo;
 // $topbar-menu-icon-color-toggled: $jumbo;
