--- a/app/views/console.html
+++ b/app/views/console.html
@@ -1,52 +1,52 @@
 <div class="off-canvas-wrap" ng-cloak>
   <top-bar>
     <ul class="title-area">
-      <li class="name">
-        <h1><a href="#">点快</a></h1>
+      <li>
+        <div class="name">
+            <div class="logo-title hide-for-small-only">点快</div>
+            <div class="logo-subtitle hide-for-small-only">diankuai.cn</div>
+
+            <span class="show-for-small-only text-center restaurant-title">{{restaurant.name}}</span>
+        </div>
       </li>
-      <li toggle-top-bar class="menu-icon"><a href="#">Menu<i class="fi-widget large"></i></a></li>
+      <li toggle-top-bar class="menu-icon"><a href="#"><i class="fi-list"></i></a></li>
     </ul>
-
-    <section class="middle tab-bar-section">
-        <p class="title">{{restaurant.name}}</p>
-    </section>
-
+    <div class="restaurant-title-wrap hide-for-small-only"><span class="restaurant-title text-center">{{restaurant.name}}</span></div>
     <top-bar-section>
       <!-- Right Nav Section -->
       <ul class="right">
-        <li class="active"><a ui-sref="registration">取号主页</a></li>
-        <li><a class="right-off-canvas-toggle"><i class="fi-widget large"></i></a></li>
+        <li><a class="registration-button" ui-sref="registration"><i class="fi-page-edit"></i>&nbsp;取号主页</a></li>
+        <li><a class="right-off-canvas-toggle"><i class="fi-widget"></i>&nbsp;设置</a></li>
       </ul>
     </top-bar-section>
   </top-bar>
 
   <div class="inner-wrap">
 
-    <div class="icon-bar small-vertical three-up">
-      <a ui-sref=".overview" class="item">
-        <i class="fi-home"></i>
-        <label for="">营业</label>
+    <div class="dk-icon-bar small-vertical three-up hide-for-small-only">
+      <a class="item" ui-sref=".overview" ui-sref-active="active">
+        <i class="fi-volume"></i>
+        <label for="">叫号</label>
       </a>
-      <a class="item" ui-sref=".history">
-        <i class="fi-info"></i>
+      <a class="item" ui-sref=".history" ui-sref-active="active">
+        <i class="fi-clock"></i>
         <label for="">历史</label>
       </a>
-      <a class="item" ui-sref=".report">
-        <i class="fi-mail"></i>
-        <label for="">分析</label>
+      <a class="item" ui-sref=".report" ui-sref-active="active">
+        <i class="fi-graph-trend"></i>
+        <label for="">统计</label>
       </a>
     </div>
 
     <section id="content">
       <div class="row">
-        <div class="small-12 columns" ui-view>
+        <div class="small-12 medium-11 medium-offset-1 columns" ui-view>
         </div>
       </div>
     </section>
 
     <aside class="right-off-canvas-menu">
       <ul class="off-canvas-list">
-        <li><label>{{account.username}}</label></li>
         <li><a ui-sref=".table">餐桌类型管理</a></li>
         <li><a ui-sref=".restaurant">餐厅配置</a></li>
         <li><a ui-sref=".change_passwd">修改密码</a></li>
