--- a/app/styles/settings.scss
+++ b/app/styles/settings.scss
@@ -95,7 +95,7 @@ $include-html-global-classes: $include-html-classes;
 // $font-weight-normal: normal !default;
 // $font-weight-bold: bold !default;
 
-// $white       : #FFFFFF;
+$white       : #FFFFFF;
 // $ghost       : #FAFAFA;
 // $snow        : #F9F9F9;
 // $vapor       : #F6F6F6;
@@ -132,7 +132,10 @@ $include-html-global-classes: $include-html-classes;
 
 // custom colors by diankuai
 $dk-orange: #FF7700;
+$dk-orange-light: #FF9933;
 $dk-gray: #EFEFEF;
+$dk-green: #009900;
+$dk-green-light: #00CC00;
 
 // We use these as default colors throughout
 // $primary-color: #008CBA;
@@ -824,7 +827,7 @@ $dk-gray: #EFEFEF;
 
 // $include-html-off-canvas-classes: $include-html-classes;
 
-// $tabbar-bg: $oil;
+$tabbar-bg: $dk-orange-light;
 // $tabbar-height: rem-calc(45);
 // $tabbar-icon-width: $tabbar-height;
 // $tabbar-line-height: $tabbar-height;
@@ -843,9 +846,9 @@ $dk-gray: #EFEFEF;
 // $tabbar-header-margin: 0;
 
 // Off Canvas Menu Variables
-// $off-canvas-width: rem-calc(250);
-// $off-canvas-bg: $oil;
-// $off-canvas-bg-hover: scale-color($tabbar-bg, $lightness: -30%);
+$off-canvas-width: rem-calc(150);
+$off-canvas-bg: $dk-orange;
+$off-canvas-bg-hover: scale-color($tabbar-bg, $lightness: 20%);
 
 // Off Canvas Menu List Variables
 // $off-canvas-label-padding: 0.3rem rem-calc(15);
@@ -858,8 +861,8 @@ $dk-gray: #EFEFEF;
 // $off-canvas-label-border-bottom: none;
 // $off-canvas-label-margin:0;
 // $off-canvas-link-padding: rem-calc(10, 15);
-// $off-canvas-link-color: rgba($white, 0.7);
-// $off-canvas-link-border-bottom: 1px solid scale-color($off-canvas-bg, $lightness: -25%);
+$off-canvas-link-color: $white;
+$off-canvas-link-border-bottom: 1px solid scale-color($off-canvas-bg, $lightness: 25%);
 // $off-canvas-back-bg: $tuatara;
 // $off-canvas-back-border-top: $off-canvas-label-border-top;
 // $off-canvas-back-border-bottom: $off-canvas-label-border-bottom;
@@ -886,6 +889,7 @@ $dk-gray: #EFEFEF;
 // $off-canvas-overlay-transition: background 300ms ease;
 // $off-canvas-overlay-cursor: pointer;
 // $off-canvas-overlay-box-shadow: -4px 0 4px rgba($black, 0.5), 4px 0 4px rgba($black, 0.5);
+$off-canvas-overlay-box-shadow: 0;
 // $off-canvas-overlay-background: rgba($white, 0.2);
 // $off-canvas-overlay-background-hover: rgba($white, 0.05);
 
