--- a/app/views/console.html
+++ b/app/views/console.html
@@ -23,7 +23,14 @@
 
   <div class="inner-wrap">
 
-    <div class="dk-icon-bar small-vertical three-up hide-for-small-only">
+    <section id="content">
+      <div class="row">
+        <div class="small-12 medium-11 medium-offset-1 columns" ui-view>
+        </div>
+      </div>
+    </section>
+
+    <div class="dk-vertical-icon-bar icon-bar vertical three-up hide-for-small-only">
       <a class="item" ui-sref=".overview" ui-sref-active="active">
         <i class="fi-volume"></i>
         <label for="">叫号</label>
@@ -38,12 +45,20 @@
       </a>
     </div>
 
-    <section id="content">
-      <div class="row">
-        <div class="small-12 medium-11 medium-offset-1 columns" ui-view>
-        </div>
-      </div>
-    </section>
+    <div class="dk-icon-bar icon-bar three-up show-for-small-only">
+      <a class="item" ui-sref=".overview" ui-sref-active="active">
+        <i class="fi-volume"></i>
+        <label for="">叫号</label>
+      </a>
+      <a class="item" ui-sref=".history" ui-sref-active="active">
+        <i class="fi-clock"></i>
+        <label for="">历史</label>
+      </a>
+      <a class="item" ui-sref=".report" ui-sref-active="active">
+        <i class="fi-graph-trend"></i>
+        <label for="">统计</label>
+      </a>
+    </div>
 
     <aside class="right-off-canvas-menu">
       <ul class="off-canvas-list">
